# stm32_fonarik

./: CMakeLists.txt  README.md  install  lg.php
src/: main.c  main.h  onewire.c  onewire.h
